fix marquee text wrap issue on mobile

--- a/src/_homemarquee.scss
+++ b/src/_homemarquee.scss
@@ -168,12 +168,15 @@ $skew: -15deg;
     .typing {
       font-weight: 700;
       text-shadow: 2px 2px 0px rgba(0,0,0,0.15);
+      font-size: 1.75rem;
     }
 
     @include breakpoint(small down){
-      font-size: 1.75rem;
+      font-size: 1.5rem;
       line-height: 2.25rem;
       height: 85px;
+      padding-top: 0.5rem;
+      margin-bottom: 1rem;
     }
   }
   p {
